objects/Matchback_MDT__mdt.object
<CustomObject>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                    <label>A-Honda</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B-Acura</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>P-PowerEquipment</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>M-Motorcycle</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Code_MDT__c</fullName>
        <label>Status Code MDT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <label>Subdivision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acura</fullName>
                    <default>true</default>
                    <label>Acura</label>
                </value>
                <value>
                    <fullName>Engine</fullName>
                </value>
                <value>
                    <fullName>Honda</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>Motorcycle</fullName>
                </value>
                <value>
                    <fullName>Power Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Matchback MDT</label>
    <pluralLabel>Matchbacks MDT</pluralLabel>
</CustomObject>